--- a/others/comparing-qodo-vs-continue.mdx
+++ b/others/comparing-qodo-vs-continue.mdx
@@ -10,7 +10,9 @@ metaDescription: 'In-depth comparison of Qodo Gen and Continue AI code assistant
 canonicalUrl: ''
 ---
 
-As AI-powered development tools continue to reshape how we write code, Qodo Gen and Continue stand out as two prominent solutions in the market. Both tools offer robust IDE integration and AI-assisted coding capabilities, but they differ significantly in their approach to deployment and pricing models. This comparison will help you understand the key differences and make an informed decision for your development needs.
+As AI-powered developer tools continue to reshape how we write code, [Qodo Gen](https://www.qodo.ai/) and [Continue](https://www.continue.dev/) stand out as two prominent solutions in the market. Both offer robust IDE integration and AI code generation, but they differ significantly in their approach to deployment and pricing models. 
+
+This comparison will help you understand the key differences and make an informed decision for your development needs.
 
 ## Feature Comparison
 
@@ -29,7 +31,7 @@ As AI-powered development tools continue to reshape how we write code, Qodo Gen 
     ['JetBrains Support', '✓', '✓'],
     ['NVIM Support', '✗', '✗'],
     ['Models Supported', 'GPT-4, Claude 3.5, Gemini', 'Universal and Custom Models'],
-    ['Pricing', 'Free, Team $19/mo, Enterprise', 'Free tier + Enterprise plans']
+    ['Pricing', 'Free Developer tier + Teams $19/user/mo + Enterprise custom price', 'Free + Enterprise plans']
 ]
 
 ## Code Completion
@@ -67,13 +69,36 @@ Continue's open-source nature provides a unique advantage in terms of privacy an
 ## Pricing
 
 ### Qodo Gen
-- **Free Tier**: Basic features for individual developers
-- **Pro Tier**: Enhanced functionality including AI-assisted code completion for teams and enterprises
+- **Developer Tier**
+  - Free
+  - Access to basic features
+  - Suitable for individual developers
+  - Basic IDE integration
+- **Teams Tier**
+  - $19 per user, per month
+  - Enhanced AI-assisted code completion
+  - Pre-pull request review inside the IDE
+  - Standard support
+- **Enterprise Tier**
+  - Custom pricing
+  - Self-hosted solution
+  - Full organization codebase awareness
+  - Enterprise SSO
+  - Priority support
 
 ### Continue
-- **Free**: Complete access to all features
-- **Open Source**: Available under Apache 2.0 license
-- **Self-hosted**: No additional costs for self-hosting
+- **Free Open Source**
+  - Free forever
+  - Real-time code suggestions
+  - Automated refactoring
+  - Testing and debugging assistance
+  - Seamless IDE integration
+- **Enterprise**
+  - Enhanced features
+  - Scalability
+  - Enhanced security and privacy
+  - Dedicated support
+  - Collaboration tools
 
 ## Conclusion
 
