--- a/tabnine/comparing-tabnine-vs-codeium.mdx
+++ b/tabnine/comparing-tabnine-vs-codeium.mdx
@@ -10,7 +10,9 @@ metaDescription: 'In-depth comparison of Tabnine and Codeium, exploring features
 canonicalUrl: ''
 ---
 
-As AI-powered development tools continue to reshape how we write code, Tabnine and Codeium stand out as two prominent solutions in the market. Both tools offer sophisticated code completion and AI assistance capabilities, but differ significantly in their approach to privacy, deployment options, and pricing models. This comparison will help you understand the key differences and make an informed decision for your development needs.
+As AI-powered developer tools continue to reshape how we write code, [Tabnine](https://www.tabnine.com/) and [Codeium](https://codeium.com/) stand out as two prominent solutions in the market. Both offer sophisticated code generation and AI assistance capabilities, but differ significantly in their approach to privacy, deployment options, and pricing models. 
+
+This comparison will help you understand the key differences and make an informed decision for your development needs.
 
 ## Feature Comparison
 
@@ -29,13 +31,13 @@ As AI-powered development tools continue to reshape how we write code, Tabnine a
     ['JetBrains Support', '✓', '✗'],
     ['NVIM Support', '✓', '✗'],
     ['Models Supported', 'Universal and Custom Models', 'GPT-4o, Claude 3.5'],
-    ['Pricing', 'Free tier + Enterprise $39/mo', 'Free, Pro $15/mo, Ultimate $60/mo']
+    ['Pricing', 'Dev $9/mo + Enterprise $30/user/mo', 'Free + Pro $15/mo + Pro Ultimate $60/mo']
 ]
 
 ## Code Completion
 
 ### Tabnine
-Tabnine offers sophisticated code completion with whole-line and full-function suggestions. It provides context-aware completions that adapt to your coding style and can even convert natural language comments into functional code. The system learns from your codebase and offers partial completion acceptance, allowing developers to accept suggestions line-by-line or word-by-word.
+Tabnine offers sophisticated code completion with whole-line and full-function suggestions. It provides context-aware completions that adapt to your coding style, and can even convert natural language comments into functional code. The system learns from your codebase and offers partial completion acceptance, allowing developers to accept suggestions line-by-line or word-by-word.
 
 ### Codeium
 Codeium provides contextually aware in-line and multi-line suggestions with support for fill-in-the-middle (FIM) completions. It specializes in providing boilerplate code and adapts to different development focuses, whether front-end, back-end, or full-stack. The system offers real-time suggestions and can be paused or snoozed as needed.
@@ -46,12 +48,12 @@ Codeium provides contextually aware in-line and multi-line suggestions with supp
 Tabnine integrates AI chat functionality within the IDE, offering code-aware conversations and assistance. While specific details about chat capabilities are limited in the documentation, it provides comment-to-code conversions and intelligent code suggestions through its AI models.
 
 ### Codeium
-Codeium features the Cascade system, an agentic chatbot that maintains awareness of previous actions. It offers two distinct modes: Write mode for direct codebase modifications and Chat mode for general inquiries and discussions about the codebase. The chat system is deeply integrated into the IDE experience.
+Codeium features the Cascade system, an agentic chatbot that maintains awareness of previous actions. It offers two distinct modes: Write mode for direct codebase modifications, and Chat mode for general inquiries and discussions about the codebase. The chat system is deeply integrated into the IDE experience.
 
 ## Context Awareness
 
 ### Tabnine
-Tabnine's AI models adapt to individual coding patterns and learn from your codebase. It offers personalization capabilities that fine-tune suggestions based on project-specific needs and team-wide coding patterns. The system provides context-aware suggestions that improve over time.
+Tabnine's AI models adapt to individual coding patterns and learn from your codebase. It offers personalization capabilities that fine-tune suggestions based on project-specific needs and team-wide coding patterns. The system also provides context-aware suggestions that improve over time.
 
 ### Codeium
 Codeium maintains real-time awareness of the codebase and previous interactions. Its LLM-powered system understands the context of your code and provides relevant suggestions based on the current file and project context. The tool demonstrates strong contextual understanding across different programming paradigms.
@@ -67,21 +69,40 @@ Codeium implements end-to-end encryption and allows users to opt out of code sni
 ## Pricing
 
 ### Tabnine
-- **Basic Plan**: Entry-level features for individual developers
-- **Dev Plan**: Enhanced features for professional developers
-- **Pro Plan**: Advanced features for power users
-- **Enterprise Plans**:
-  - **SaaS Version**: Cloud-based team collaboration
-  - **Private Installation**: On-premises deployment with custom implementation
+- **Dev Plan**
+  - $9 per month
+  - AI agents personalized to your coding standards
+  - Integration with Atlassian Jira
+  - Enterprise-grade security, safety, and privacy
+- **Enterprise Plans**
+  - $39 per user, per month
+  - SaaS and Private Installation options
+  - Full control over infrastructure
+  - Maximum security features
 
 ### Codeium
-- **Free Plan**: 5 User Prompt credits, 5 Flow Action credits
-- **Free Trial**: 50 User Prompt credits, 200 Flow Action credits (2 weeks)
-- **Pro Plan**: $15/month - 500 User Prompt credits, 1500 Flow Action credits
-- **Pro Ultimate**: $60/month - Unlimited User Prompt credits, 3000 Flow Action credits
+- **Free Plan**
+  - 5 User Prompt credits
+  - 5 Flow Action credits
+  - Cannot purchase more premium model credits
+  - Access to Cascade Base Model
+- **Pro Plan**
+  - $15 per month
+  - 500 User Prompt credits
+  - 1500 Flow Action credits
+  - Ability to purchase more premium model credits
+  - Priority unlimited access to Cascade Base Model
+- **Pro Ultimate**
+  - $60 per month
+  - Unlimited User Prompt credits
+  - 3000 Flow Action credits
+  - Ability to purchase more premium model credits
+  - Priority unlimited access to Cascade Base Model
 
 ## Conclusion
 
 Both Tabnine and Codeium offer powerful AI-assisted development capabilities, but they cater to slightly different needs. Tabnine stands out with its emphasis on privacy and security, offering self-hosted options and enterprise-grade deployments. Its adaptive AI models and personalization features make it particularly attractive for teams requiring custom solutions and maximum data control.
 
-Codeium, on the other hand, excels in its credit-based pricing model and advanced chat capabilities through its Cascade system. While it doesn't offer self-hosted options, it provides robust privacy controls and a more structured approach to AI assistance with its dual-mode chat system. The choice between the two will largely depend on your specific needs regarding deployment flexibility, pricing structure, and the importance of self-hosted solutions.
+Codeium, on the other hand, excels in its credit-based pricing model and advanced chat capabilities through its Cascade system. While it doesn't offer self-hosted options, it provides robust privacy controls and a more structured approach to AI assistance with its dual-mode chat system. 
+
+Ultimately, the choice between the two will largely depend on your specific needs regarding deployment flexibility, pricing structure, and the importance of self-hosted solutions.
