--- a/tabnine/comparing-tabnine-vs-codeium.mdx
+++ b/tabnine/comparing-tabnine-vs-codeium.mdx
@@ -10,7 +10,9 @@ metaDescription: 'In-depth comparison of Tabnine and Codeium, exploring features
 canonicalUrl: ''
 ---
 
-As AI-powered development tools continue to reshape how we write code, Tabnine and Codeium stand out as two prominent solutions in the market. Both tools offer sophisticated code completion and AI assistance capabilities, but differ significantly in their approach to privacy, deployment options, and pricing models. This comparison will help you understand the key differences and make an informed decision for your development needs.
+As AI-powered developer tools continue to reshape how we write code, [Tabnine](https://www.tabnine.com/) and [Codeium](https://codeium.com/) stand out as two prominent solutions in the market. Both offer sophisticated code generation and AI assistance capabilities, but differ significantly in their approach to privacy, deployment options, and pricing models. 
+
+This comparison will help you understand the key differences and make an informed decision for your development needs.
 
 ## Feature Comparison
 
@@ -29,7 +31,7 @@ As AI-powered development tools continue to reshape how we write code, Tabnine a
     ['JetBrains Support', '✓', '✗'],
     ['NVIM Support', '✓', '✗'],
     ['Models Supported', 'Universal and Custom Models', 'GPT-4o, Claude 3.5'],
-    ['Pricing', 'Free tier + Enterprise $39/mo', 'Free, Pro $15/mo, Ultimate $60/mo']
+    ['Pricing', 'Dev $9/mo + Enterprise $30/user/mo', 'Free + Pro $15/mo + Pro Ultimate $60/mo']
 ]
 
 ## Code Completion
@@ -46,7 +48,7 @@ Codeium provides contextually aware in-line and multi-line suggestions with supp
 Tabnine integrates AI chat functionality within the IDE, offering code-aware conversations and assistance. While specific details about chat capabilities are limited in the documentation, it provides comment-to-code conversions and intelligent code suggestions through its AI models.
 
 ### Codeium
-Codeium features the Cascade system, an agentic chatbot that maintains awareness of previous actions. It offers two distinct modes: Write mode for direct codebase modifications and Chat mode for general inquiries and discussions about the codebase. The chat system is deeply integrated into the IDE experience.
+Codeium features the Cascade system, an agentic chatbot that maintains awareness of previous actions. It offers two distinct modes: Write mode for direct codebase modifications, and Chat mode for general inquiries and discussions about the codebase. The chat system is deeply integrated into the IDE experience.
 
 ## Context Awareness
 
@@ -54,7 +56,7 @@ Codeium features the Cascade system, an agentic chatbot that maintains awareness
 Tabnine's AI models adapt to individual coding patterns and learn from your codebase. It offers personalization capabilities that fine-tune suggestions based on project-specific needs and team-wide coding patterns. The system provides context-aware suggestions that improve over time.
 
 ### Codeium
-Codeium maintains real-time awareness of the codebase and previous interactions. Its LLM-powered system understands the context of your code and provides relevant suggestions based on the current file and project context. The tool demonstrates strong contextual understanding across different programming paradigms.
+Codeium maintains real-time awareness of the codebase and previous interactions. Its LLM-powered system understands the context of your code and provides relevant suggestions based on the current file and project context. The tool also demonstrates strong contextual understanding across different programming paradigms.
 
 ## Privacy and Security
 
@@ -62,26 +64,45 @@ Codeium maintains real-time awareness of the codebase and previous interactions.
 Tabnine places a strong emphasis on code privacy with multiple deployment options, including self-hosted solutions for enterprise customers. It offers protected and private Universal models, ensures code protection features, and implements provenance and attribution tracking. The system supports encrypted communications and complies with data protection regulations.
 
 ### Codeium
-Codeium implements end-to-end encryption and allows users to opt out of code snippet telemetry. While it doesn't offer self-hosted options, it maintains strict data handling protocols and ensures no code sharing with third parties. Users have control over their data sharing preferences through account settings.
+Codeium implements end-to-end encryption and allows users to opt out of code snippet telemetry. While it doesn't offer self-hosted options, it maintains strict data handling protocols, and ensures no code sharing with third parties. Users have control over their data sharing preferences through account settings.
 
 ## Pricing
 
 ### Tabnine
-- **Basic Plan**: Entry-level features for individual developers
-- **Dev Plan**: Enhanced features for professional developers
-- **Pro Plan**: Advanced features for power users
-- **Enterprise Plans**:
-  - **SaaS Version**: Cloud-based team collaboration
-  - **Private Installation**: On-premises deployment with custom implementation
+- **Dev Plan**
+  - $9 per month
+  - AI agents personalized to your coding standards
+  - Integration with Atlassian Jira
+  - Enterprise-grade security, safety, and privacy
+- **Enterprise Plans**
+  - $39 per user, per month
+  - SaaS and Private Installation options
+  - Full control over infrastructure
+  - Maximum security features
 
 ### Codeium
-- **Free Plan**: 5 User Prompt credits, 5 Flow Action credits
-- **Free Trial**: 50 User Prompt credits, 200 Flow Action credits (2 weeks)
-- **Pro Plan**: $15/month - 500 User Prompt credits, 1500 Flow Action credits
-- **Pro Ultimate**: $60/month - Unlimited User Prompt credits, 3000 Flow Action credits
+- **Free Plan**
+  - 5 User Prompt credits
+  - 5 Flow Action credits
+  - Cannot purchase more premium model credits
+  - Access to Cascade Base Model
+- **Pro Plan**
+  - $15 per month
+  - 500 User Prompt credits
+  - 1500 Flow Action credits
+  - Ability to purchase more premium model credits
+  - Priority unlimited access to Cascade Base Model
+- **Pro Ultimate**
+  - $60 per month
+  - Unlimited User Prompt credits
+  - 3000 Flow Action credits
+  - Ability to purchase more premium model credits
+  - Priority unlimited access to Cascade Base Model
 
 ## Conclusion
 
 Both Tabnine and Codeium offer powerful AI-assisted development capabilities, but they cater to slightly different needs. Tabnine stands out with its emphasis on privacy and security, offering self-hosted options and enterprise-grade deployments. Its adaptive AI models and personalization features make it particularly attractive for teams requiring custom solutions and maximum data control.
 
-Codeium, on the other hand, excels in its credit-based pricing model and advanced chat capabilities through its Cascade system. While it doesn't offer self-hosted options, it provides robust privacy controls and a more structured approach to AI assistance with its dual-mode chat system. The choice between the two will largely depend on your specific needs regarding deployment flexibility, pricing structure, and the importance of self-hosted solutions.
+Codeium, on the other hand, excels in its credit-based pricing model and advanced chat capabilities through its Cascade system. While it doesn't offer self-hosted options, it provides robust privacy controls and a more structured approach to AI assistance with its dual-mode chat system. 
+
+Ultimately, the choice between the two will largely depend on your specific needs regarding deployment flexibility, pricing structure, and the importance of self-hosted solutions.
